<resources>
    <string name="app_name">Bref, mange.</string>
    <string name="main_client">J\'ai faim</string>
    <string name="main_delivery">Je m\'inscris pour faire des livraisons</string>
    <string name="main_restaurant">J\'ai un restaurant</string>
    <string name="client_phonenumber">Numéro de téléphone</string>
    <string name="client_gps">GPS</string>
    <string name="confirm">Valider</string>
    <string name="restaurant_login">Connexion</string>
    <string name="restaurant_register">Inscription</string>
    <string name="restaurant_entername">Nom du restaurant</string>
    <string name="restaurant_enterpassword">Mot de passe</string>
    <string name="restaurant_enteradress">Adresse</string>
    <string name="restaurant_enterphone">Numéro de téléphone</string>
    <string name="client_search">Rechercher</string>
    <string name="nav_drawer_open">Ouvrir</string>
    <string name="nav_drawer_close">Fermer</string>
    <string name="panier">Panier</string>
    <string name="historique">Historique</string>
    <string name="r_clamation">Réclamation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">Page principale</string>
    <string name="reclamation">Réclamation</string>
    <string name="pendingorders">Commandes en cours</string>
    <string name="mail">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="client_register">S\'enregistrer</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="ville">Ville</string>
    <string name="code_postal">Code postal</string>
    <string name="addresse">Addresse</string>
    <string name="telephone">Numéro de téléphone</string>
    <string name="pays">Pays</string>
    <string name="adresse">Adresse</string>
    <string name="erreur_connection">Erreur lors de la connection</string>
    <string name="unauth">Unauthorized access</string>
    <string name="err">An error occurred</string>
    <string name="command">Commander</string>
    <string name="nom_du_restaurant">Nom du restaurant</string>
    <string name="description_du_restaurant">Description du restaurant</string>
    <string name="app_logo">App logo</string>
    <string name="nom_du_menu">Nom du menu</string>
    <string name="description_du_menu">Description du menu</string>
    <string name="prix">Prix</string>
    <string name="ajouter_un_menu">Ajouter un menu</string>
    <string name="ajouter_un_produit">Ajouter un produit</string>
    <string name="plus">+</string>
    <string name="nom_du_produit">Nom du produit</string>
    <string name="description_du_produit">Description du produit</string>
    <string name="logout">Se déconnecter</string>
    <string name="ajouter_au_panier">Ajouter au panier</string>
    <string name="nb_menus">%1$d menus disponibles</string>
    <string name="payer">Payer</string>
    <string name="num_ro_de_carte_bleu">Numéro de carte bleu</string>
    <string name="csv">csv</string>
    <string name="expiration">expiration</string>
    <string name="paiement">Paiement</string>
    <string name="url_de_l_image">URL de l\'image</string>
    <string name="nombre">Nombre</string>
    <string name="ajouter_au_menu">Ajouter au menu</string>
    <string name="status">Status</string>
    <string name="nom_du_client">Nom du client</string>
    <string name="addresse_du_client">Addresse du client</string>
    <string name="addresse_du_restaurant">Addresse du restaurant</string>
    <string name="commandes_en_cours">Commandes en cours</string>
    <string name="commandes_livr_es">Commandes livrées</string>
    <string name="mes_commandes">Mes commandes</string>
</resources>
