<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adapter_addproduct_card"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/adapter_addproduct_iv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/app_logo" />

        <LinearLayout
            android:id="@+id/adapter_addproduct_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/adapter_addproduct_iv"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/adapter_addproduct_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/nom_du_produit"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_addproduct_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="2"
                android:text="@string/description_du_produit"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/adapter_addproduct_iv">

            <TextView
                android:id="@+id/adapter_addproduct_prix"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/prix"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                />

            <TextView
                android:id="@+id/adapter_addproduct_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nombre"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adapter_addproduct_btn"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_au_menu"


                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>