<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adapter_restaurant_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
                android:id="@+id/adapter_restaurant_iv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/app_logo"
                android:contentDescription="@string/app_logo"/>

        <LinearLayout
            android:id="@+id/adapter_restaurant_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/adapter_restaurant_iv"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/adapter_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/nom_du_restaurant"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_restaurant_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/description_du_restaurant"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            <TextView
                    android:id="@+id/adapter_restaurant_nb_menus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/nb_menus" android:textColor="@color/primary"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
