<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".delivery.Delivery_loginregister">

    <TextView
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/primary"
        android:textSize="36sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/delivery_login"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/restaurant_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/delivery_register"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/client_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_login" />
</androidx.constraintlayout.widget.ConstraintLayout>